# invidious-tui

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: app.rs  channel.rs  config.rs  data.rs  events.rs  handlers.rs  invidious.rs  main.rs  media.rs  player.rs  playlist.rs  search.rs  ui.rs  utils.rs  video.rs
src/media/: channel.rs  mod.rs  playlist.rs  video.rs
src/ui/: mod.rs  table_info.rs  views.rs
